# virtual_camera

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: camera.py  module.py  unix_camera.py  win_camera.py
virtual_camera/: __init__.py  camera.py  module.py  unix_camera.py  win_camera.py
