[project]
name = "virtual_camera"
version = "1.1.4"
description = "Cross-Platform Virtual Camera using Python."
authors = [
    "Illia Shvarov <illia.shvarov@gmail.com>"
]
license = "Apache"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/THOSE-EYES/virtual_camera"
repository = "https://github.com/THOSE-EYES/virtual_camera"
documentation = "https://github.com/THOSE-EYES/virtual_camera"

keywords = ["virtual", "camera", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pyfakewebcam",
    "pyvirtualcam"
]
build-backend = "setuptools.build_meta"